[INCOME-2412] Abstraer código común algoritmo Ch DV